--- a/MyContentProvider/res/values/strings.xml
+++ b/MyContentProvider/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="hello">Hello World, MainActivity!</string>
     <string name="app_name">MyContentProvider</string>
+    <string name="live_folders_name">MyLiveFolder</string>
+    <string name="detail">DetailActivity</string>
 </resources>
